--- a/Python/notebooks/basics_01.ipynb
+++ b/Python/notebooks/basics_01.ipynb
@@ -6,8 +6,7 @@
    "source": [
     "01. Are semi-colons required in Python? Are they compulsory?\n",
     "\n",
-    "    Semi-colons are required for complete conditional operators like if-else , loop blocks functions and classes. \n",
-    "    It is compulsory to have them in place to for the compiler to know it encountered the end of the conditional block. "
+    "    Semicolons in Python, while syntactically correct, are largely unnecessary and not recommended as per Python's style guidelines. The emphasis should always be on writing clean, readable, and maintainable code."
    ]
   },
   {
@@ -16,7 +15,7 @@
    "source": [
     "02. In what case can semi-colon turn to be useful?\n",
     "\n",
-    "    To complete a code block such that the compiler understand it reached the end of the statement."
+    "    Semicolons can be used to delimit statements if you wish to put multiple statements on the same line. A semicolon in Python denotes separation, rather than termination."
    ]
   },
   {
@@ -25,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "03."
+    "03. "
    ]
   },
   {
